# Phoenix-SmartLocatorAI

./: .gitignore  LICENSE  MANIFEST.in  README.md  dom_scanner.py  enhanced_demo.py  example_usage.py  gemini_demo.py  gemini_enhanced_locator_generator.py  gemini_report_20251010_133716.json  gemini_report_20251010_133716.md  locator_generator.py  pure_python_demo.py  pyproject.toml  requirements.txt  simple_demo.py  smart_locator_ai.py
src/phoenix_smartlocatorai/: __init__.py  cli.py  core.py  page_object_exporter.py
src/phoenix_smartlocatorai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_core.py  test_dom_scanner.py
